# serializer version: 1
# name: test_select_ok[select_as_struct]
  '''
  SELECT AS STRUCT column1 FROM table1
  
  query_expr
    select
      None
      select_shape	STRUCT
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query [0-36] {SELECT AS STRUCT...umn1 FROM table1}
    SelectAsStruct(distinct=False) [0-36] {SELECT AS STRUCT...umn1 FROM table1}
      SelectList [17-24] {column1}
        SelectColumn [17-24] {column1}
          Ident(column1) [17-24] {column1}
      FromClause [30-36] {table1}
        TablePathExpression [30-36] {table1}
          PathExpression [30-36] {table1}
            Ident(table1) [30-36] {table1}
  '''
# ---
# name: test_select_ok[select_as_value]
  '''
  SELECT AS VALUE column1 FROM table1
  
  query_expr
    select
      None
      select_shape	VALUE
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query [0-35] {SELECT AS VALUE ...umn1 FROM table1}
    SelectAsValue(distinct=False) [0-35] {SELECT AS VALUE ...umn1 FROM table1}
      SelectList [16-23] {column1}
        SelectColumn [16-23] {column1}
          Ident(column1) [16-23] {column1}
      FromClause [29-35] {table1}
        TablePathExpression [29-35] {table1}
          PathExpression [29-35] {table1}
            Ident(table1) [29-35] {table1}
  '''
# ---
# name: test_select_ok[select_distinct]
  '''
  SELECT DISTINCT column1 FROM table1
  
  query_expr
    select
      select_mode	DISTINCT
      None
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query [13-48] {SELECT DISTINCT ...umn1 FROM table1}
    Select(distinct=True) [13-48] {SELECT DISTINCT ...umn1 FROM table1}
      SelectList [29-36] {column1}
        SelectColumn [29-36] {column1}
          Ident(column1) [29-36] {column1}
      FromClause [42-48] {table1}
        TablePathExpression [42-48] {table1}
          PathExpression [42-48] {table1}
            Ident(table1) [42-48] {table1}
  '''
# ---
# name: test_select_ok[select_dot_star_except]
  '''
  SELECT struct_column.* EXCEPT(column1, column2) FROM table1
  
  query_expr
    select
      None
      None
      select_list
        select_dot_star
          ident	struct_column
          select_except
            select_except_list
              select_except_item
                ident	column1
              select_except_item
                ident	column2
          None
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query [13-72] {SELECT struct_co...mn2) FROM table1}
    Select(distinct=False) [13-72] {SELECT struct_co...mn2) FROM table1}
      SelectList [20-60] {struct_column.* ...olumn1, column2)}
        SelectDotStar [20-60] {struct_column.* ...olumn1, column2)}
          Ident(struct_column) [20-33] {struct_column}
          ExceptModifierList [43-59] {column1, column2}
            ExceptModifierItem [43-50] {column1}
              Ident(column1) [43-50] {column1}
            ExceptModifierItem [52-59] {column2}
              Ident(column2) [52-59] {column2}
      FromClause [66-72] {table1}
        TablePathExpression [66-72] {table1}
          PathExpression [66-72] {table1}
            Ident(table1) [66-72] {table1}
  '''
# ---
# name: test_select_ok[select_dot_star_replace]
  '''
  SELECT struct_column.* REPLACE(1 AS column1, 2 AS column2) FROM table1
  
  query_expr
    select
      None
      None
      select_list
        select_dot_star
          ident	struct_column
          None
          select_replace
            select_replace_list
              select_replace_item
                integer_literal	1
                ident	column1
              select_replace_item
                integer_literal	2
                ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query [13-83] {SELECT struct_co...mn2) FROM table1}
    Select(distinct=False) [13-83] {SELECT struct_co...mn2) FROM table1}
      SelectList [20-71] {struct_column.* ...1, 2 AS column2)}
        SelectDotStar [20-71] {struct_column.* ...1, 2 AS column2)}
          Ident(struct_column) [20-33] {struct_column}
          ReplaceModifierList [44-70] {1 AS column1, 2 AS column2}
            ReplaceModifierItem [44-56] {1 AS column1}
              IntegerLiteral(1) [44-45] {1}
              Ident(column1) [49-56] {column1}
            ReplaceModifierItem [58-70] {2 AS column2}
              IntegerLiteral(2) [58-59] {2}
              Ident(column2) [63-70] {column2}
      FromClause [77-83] {table1}
        TablePathExpression [77-83] {table1}
          PathExpression [77-83] {table1}
            Ident(table1) [77-83] {table1}
  '''
# ---
# name: test_select_ok[select_from_alias_explicit]
  '''
  SELECT column1 FROM table1 AS alias1
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          as_alias
            ident	alias1
          None
  
  Query [0-36] {SELECT column1 F...table1 AS alias1}
    Select(distinct=False) [0-36] {SELECT column1 F...table1 AS alias1}
      SelectList [7-14] {column1}
        SelectColumn [7-14] {column1}
          Ident(column1) [7-14] {column1}
      FromClause [20-36] {table1 AS alias1}
        TablePathExpression [20-36] {table1 AS alias1}
          PathExpression [20-26] {table1}
            Ident(table1) [20-26] {table1}
          Alias [27-36] {AS alias1}
            Ident(alias1) [30-36] {alias1}
  '''
# ---
# name: test_select_ok[select_from_alias_implicit]
  '''
  SELECT column1 FROM table1 alias1
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          as_alias
            ident	alias1
          None
  
  Query [0-33] {SELECT column1 F...OM table1 alias1}
    Select(distinct=False) [0-33] {SELECT column1 F...OM table1 alias1}
      SelectList [7-14] {column1}
        SelectColumn [7-14] {column1}
          Ident(column1) [7-14] {column1}
      FromClause [20-33] {table1 alias1}
        TablePathExpression [20-33] {table1 alias1}
          PathExpression [20-26] {table1}
            Ident(table1) [20-26] {table1}
          Alias [27-33] {alias1}
            Ident(alias1) [27-33] {alias1}
  '''
# ---
# name: test_select_ok[select_from_time_travel]
  '''
  SELECT column1 FROM table1 FOR SYSTEM_TIME AS OF '1970-01-01'
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          time_travel
            string_literal	'1970-01-01'
  
  Query [0-61] {SELECT column1 F... OF '1970-01-01'}
    Select(distinct=False) [0-61] {SELECT column1 F... OF '1970-01-01'}
      SelectList [7-14] {column1}
        SelectColumn [7-14] {column1}
          Ident(column1) [7-14] {column1}
      FromClause [20-61] {table1 FOR SYSTE... OF '1970-01-01'}
        TablePathExpression [20-61] {table1 FOR SYSTE... OF '1970-01-01'}
          PathExpression [20-26] {table1}
            Ident(table1) [20-26] {table1}
          TimeTravel [27-61] {FOR SYSTEM_TIME ... OF '1970-01-01'}
            StringLiteral('1970-01-01') [49-61] {'1970-01-01'}
  '''
# ---
# name: test_select_ok[select_list_alias_explicit]
  '''
  SELECT column1 AS alias1 FROM table1
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	column1
          as_alias
            ident	alias1
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query [0-36] {SELECT column1 A...ias1 FROM table1}
    Select(distinct=False) [0-36] {SELECT column1 A...ias1 FROM table1}
      SelectList [7-24] {column1 AS alias1}
        SelectColumn [7-24] {column1 AS alias1}
          Ident(column1) [7-14] {column1}
          Alias [15-24] {AS alias1}
            Ident(alias1) [18-24] {alias1}
      FromClause [30-36] {table1}
        TablePathExpression [30-36] {table1}
          PathExpression [30-36] {table1}
            Ident(table1) [30-36] {table1}
  '''
# ---
# name: test_select_ok[select_list_alias_implicit]
  '''
  SELECT column1 alias1 FROM table1
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	column1
          as_alias
            ident	alias1
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query [0-33] {SELECT column1 a...ias1 FROM table1}
    Select(distinct=False) [0-33] {SELECT column1 a...ias1 FROM table1}
      SelectList [7-21] {column1 alias1}
        SelectColumn [7-21] {column1 alias1}
          Ident(column1) [7-14] {column1}
          Alias [15-21] {alias1}
            Ident(alias1) [15-21] {alias1}
      FromClause [27-33] {table1}
        TablePathExpression [27-33] {table1}
          PathExpression [27-33] {table1}
            Ident(table1) [27-33] {table1}
  '''
# ---
# name: test_select_ok[select_list_multi]
  '''
  SELECT column1, column2 FROM table1
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	column1
        select_expr
          ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query [0-35] {SELECT column1, ...umn2 FROM table1}
    Select(distinct=False) [0-35] {SELECT column1, ...umn2 FROM table1}
      SelectList [7-23] {column1, column2}
        SelectColumn [7-14] {column1}
          Ident(column1) [7-14] {column1}
        SelectColumn [16-23] {column2}
          Ident(column2) [16-23] {column2}
      FromClause [29-35] {table1}
        TablePathExpression [29-35] {table1}
          PathExpression [29-35] {table1}
            Ident(table1) [29-35] {table1}
  '''
# ---
# name: test_select_ok[select_list_single]
  '''
  SELECT column1 FROM table1
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query [0-26] {SELECT column1 FROM table1}
    Select(distinct=False) [0-26] {SELECT column1 FROM table1}
      SelectList [7-14] {column1}
        SelectColumn [7-14] {column1}
          Ident(column1) [7-14] {column1}
      FromClause [20-26] {table1}
        TablePathExpression [20-26] {table1}
          PathExpression [20-26] {table1}
            Ident(table1) [20-26] {table1}
  '''
# ---
# name: test_select_ok[select_list_trailing_comma]
  '''
  SELECT column1, FROM table2
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table2
          None
          None
  
  Query [0-27] {SELECT column1, FROM table2}
    Select(distinct=False) [0-27] {SELECT column1, FROM table2}
      SelectList [7-15] {column1,}
        SelectColumn [7-14] {column1}
          Ident(column1) [7-14] {column1}
      FromClause [21-27] {table2}
        TablePathExpression [21-27] {table2}
          PathExpression [21-27] {table2}
            Ident(table2) [21-27] {table2}
  '''
# ---
# name: test_select_ok[select_literal]
  '''
  SELECT 1
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          integer_literal	1
      None
  
  Query [0-8] {SELECT 1}
    Select(distinct=False) [0-8] {SELECT 1}
      SelectList [7-8] {1}
        SelectColumn [7-8] {1}
          IntegerLiteral(1) [7-8] {1}
  '''
# ---
# name: test_select_ok[select_star]
  '''
  SELECT * FROM table1
  
  query_expr
    select
      None
      None
      select_list
        select_star
          None
          None
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query [0-20] {SELECT * FROM table1}
    Select(distinct=False) [0-20] {SELECT * FROM table1}
      SelectList [7-8] {*}
        SelectStar [7-8] {*}
      FromClause [14-20] {table1}
        TablePathExpression [14-20] {table1}
          PathExpression [14-20] {table1}
            Ident(table1) [14-20] {table1}
  '''
# ---
# name: test_select_ok[select_star_except]
  '''
  SELECT * EXCEPT(column1, column2) FROM table1
  
  query_expr
    select
      None
      None
      select_list
        select_star
          select_except
            select_except_list
              select_except_item
                ident	column1
              select_except_item
                ident	column2
          None
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query [13-58] {SELECT * EXCEPT(...mn2) FROM table1}
    Select(distinct=False) [13-58] {SELECT * EXCEPT(...mn2) FROM table1}
      SelectList [20-46] {* EXCEPT(column1, column2)}
        SelectStar [20-46] {* EXCEPT(column1, column2)}
          ExceptModifierList [29-45] {column1, column2}
            ExceptModifierItem [29-36] {column1}
              Ident(column1) [29-36] {column1}
            ExceptModifierItem [38-45] {column2}
              Ident(column2) [38-45] {column2}
      FromClause [52-58] {table1}
        TablePathExpression [52-58] {table1}
          PathExpression [52-58] {table1}
            Ident(table1) [52-58] {table1}
  '''
# ---
# name: test_select_ok[select_star_replace]
  '''
  SELECT * REPLACE(1 AS column1, 2 AS column2) FROM table1
  
  query_expr
    select
      None
      None
      select_list
        select_star
          None
          select_replace
            select_replace_list
              select_replace_item
                integer_literal	1
                ident	column1
              select_replace_item
                integer_literal	2
                ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query [13-69] {SELECT * REPLACE...mn2) FROM table1}
    Select(distinct=False) [13-69] {SELECT * REPLACE...mn2) FROM table1}
      SelectList [20-57] {* REPLACE(1 AS c...1, 2 AS column2)}
        SelectStar [20-57] {* REPLACE(1 AS c...1, 2 AS column2)}
          ReplaceModifierList [30-56] {1 AS column1, 2 AS column2}
            ReplaceModifierItem [30-42] {1 AS column1}
              IntegerLiteral(1) [30-31] {1}
              Ident(column1) [35-42] {column1}
            ReplaceModifierItem [44-56] {2 AS column2}
              IntegerLiteral(2) [44-45] {2}
              Ident(column2) [49-56] {column2}
      FromClause [63-69] {table1}
        TablePathExpression [63-69] {table1}
          PathExpression [63-69] {table1}
            Ident(table1) [63-69] {table1}
  '''
# ---
# name: test_select_ok[select_star_scoped]
  '''
  SELECT column1.* FROM table1
  
  query_expr
    select
      None
      None
      select_list
        select_dot_star
          ident	column1
          None
          None
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query [0-28] {SELECT column1.* FROM table1}
    Select(distinct=False) [0-28] {SELECT column1.* FROM table1}
      SelectList [7-16] {column1.*}
        SelectDotStar [7-16] {column1.*}
          Ident(column1) [7-14] {column1}
      FromClause [22-28] {table1}
        TablePathExpression [22-28] {table1}
          PathExpression [22-28] {table1}
            Ident(table1) [22-28] {table1}
  '''
# ---
# name: test_select_ok[select_star_scoped_nested]
  '''
  SELECT column1.column2.* FROM table1
  
  query_expr
    select
      None
      None
      select_list
        select_dot_star
          path_expression
            ident	column1
            ident	column2
          None
          None
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query [0-36] {SELECT column1.c...n2.* FROM table1}
    Select(distinct=False) [0-36] {SELECT column1.c...n2.* FROM table1}
      SelectList [7-24] {column1.column2.*}
        SelectDotStar [7-24] {column1.column2.*}
          PathExpression [7-22] {column1.column2}
            Ident(column1) [7-14] {column1}
            Ident(column2) [15-22] {column2}
      FromClause [30-36] {table1}
        TablePathExpression [30-36] {table1}
          PathExpression [30-36] {table1}
            Ident(table1) [30-36] {table1}
  '''
# ---
# name: test_select_ok[select_subqueries]
  '''
  SELECT
      *,
      column1,
      (SELECT 1) AS column2
  FROM
      (SELECT column7 FROM table2) AS alias2
  
  query_expr
    select
      None
      None
      select_list
        select_star
          None
          None
        select_expr
          ident	column1
        select_expr
          subquery
            query_expr
              select
                None
                None
                select_list
                  select_expr
                    integer_literal	1
                None
          as_alias
            ident	column2
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                None
                None
                select_list
                  select_expr
                    ident	column7
                from_clause
                  from_item_table
                    path_expression
                      ident	table2
                    None
                    None
          as_alias
            ident	alias2
  
  Query [13-173] {SELECT *, column...able2) AS alias2}
    Select(distinct=False) [13-173] {SELECT *, column...able2) AS alias2}
      SelectList [36-101] {*, column1, (SEL...CT 1) AS column2}
        SelectStar [36-37] {*}
        SelectColumn [55-62] {column1}
          Ident(column1) [55-62] {column1}
        SelectColumn [80-101] {(SELECT 1) AS column2}
          Subquery [80-90] {(SELECT 1)}
            Query [81-89] {SELECT 1}
              Select(distinct=False) [81-89] {SELECT 1}
                SelectList [88-89] {1}
                  SelectColumn [88-89] {1}
                    IntegerLiteral(1) [88-89] {1}
          Alias [91-101] {AS column2}
            Ident(column2) [94-101] {column2}
      FromClause [135-173] {(SELECT column7 ...able2) AS alias2}
        TableSubquery [135-173] {(SELECT column7 ...able2) AS alias2}
          Subquery [135-163] {(SELECT column7 FROM table2)}
            Query [136-162] {SELECT column7 FROM table2}
              Select(distinct=False) [136-162] {SELECT column7 FROM table2}
                SelectList [143-150] {column7}
                  SelectColumn [143-150] {column7}
                    Ident(column7) [143-150] {column7}
                FromClause [156-162] {table2}
                  TablePathExpression [156-162] {table2}
                    PathExpression [156-162] {table2}
                      Ident(table2) [156-162] {table2}
          Alias [164-173] {AS alias2}
            Ident(alias2) [167-173] {alias2}
  '''
# ---
# name: test_subquery_ok[select_from_subquery]
  '''
  SELECT column1 FROM (SELECT column1 FROM table1)
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                None
                None
                select_list
                  select_expr
                    ident	column1
                from_clause
                  from_item_table
                    path_expression
                      ident	table1
                    None
                    None
          None
  
  Query [0-48] {SELECT column1 F...mn1 FROM table1)}
    Select(distinct=False) [0-48] {SELECT column1 F...mn1 FROM table1)}
      SelectList [7-14] {column1}
        SelectColumn [7-14] {column1}
          Ident(column1) [7-14] {column1}
      FromClause [20-48] {(SELECT column1 FROM table1)}
        TableSubquery [20-48] {(SELECT column1 FROM table1)}
          Subquery [20-48] {(SELECT column1 FROM table1)}
            Query [21-47] {SELECT column1 FROM table1}
              Select(distinct=False) [21-47] {SELECT column1 FROM table1}
                SelectList [28-35] {column1}
                  SelectColumn [28-35] {column1}
                    Ident(column1) [28-35] {column1}
                FromClause [41-47] {table1}
                  TablePathExpression [41-47] {table1}
                    PathExpression [41-47] {table1}
                      Ident(table1) [41-47] {table1}
  '''
# ---
# name: test_subquery_ok[select_from_subquery_aliased]
  '''
  SELECT column1 FROM (SELECT column1 FROM table1) AS table2
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                None
                None
                select_list
                  select_expr
                    ident	column1
                from_clause
                  from_item_table
                    path_expression
                      ident	table1
                    None
                    None
          as_alias
            ident	table2
  
  Query [0-58] {SELECT column1 F...able1) AS table2}
    Select(distinct=False) [0-58] {SELECT column1 F...able1) AS table2}
      SelectList [7-14] {column1}
        SelectColumn [7-14] {column1}
          Ident(column1) [7-14] {column1}
      FromClause [20-58] {(SELECT column1 ...able1) AS table2}
        TableSubquery [20-58] {(SELECT column1 ...able1) AS table2}
          Subquery [20-48] {(SELECT column1 FROM table1)}
            Query [21-47] {SELECT column1 FROM table1}
              Select(distinct=False) [21-47] {SELECT column1 FROM table1}
                SelectList [28-35] {column1}
                  SelectColumn [28-35] {column1}
                    Ident(column1) [28-35] {column1}
                FromClause [41-47] {table1}
                  TablePathExpression [41-47] {table1}
                    PathExpression [41-47] {table1}
                      Ident(table1) [41-47] {table1}
          Alias [49-58] {AS table2}
            Ident(table2) [52-58] {table2}
  '''
# ---
# name: test_subquery_ok[subquery]
  '''
  (SELECT 1)
  
  query_expr
    subquery
      query_expr
        select
          None
          None
          select_list
            select_expr
              integer_literal	1
          None
  
  Query [0-10] {(SELECT 1)}
    Subquery [0-10] {(SELECT 1)}
      Query [1-9] {SELECT 1}
        Select(distinct=False) [1-9] {SELECT 1}
          SelectList [8-9] {1}
            SelectColumn [8-9] {1}
              IntegerLiteral(1) [8-9] {1}
  '''
# ---
# name: test_subquery_ok[subquery_nested]
  '''
  (SELECT (SELECT (SELECT 1)))
  
  query_expr
    subquery
      query_expr
        select
          None
          None
          select_list
            select_expr
              subquery
                query_expr
                  select
                    None
                    None
                    select_list
                      select_expr
                        subquery
                          query_expr
                            select
                              None
                              None
                              select_list
                                select_expr
                                  integer_literal	1
                              None
                    None
          None
  
  Query [0-28] {(SELECT (SELECT (SELECT 1)))}
    Subquery [0-28] {(SELECT (SELECT (SELECT 1)))}
      Query [1-27] {SELECT (SELECT (SELECT 1))}
        Select(distinct=False) [1-27] {SELECT (SELECT (SELECT 1))}
          SelectList [8-27] {(SELECT (SELECT 1))}
            SelectColumn [8-27] {(SELECT (SELECT 1))}
              Subquery [8-27] {(SELECT (SELECT 1))}
                Query [9-26] {SELECT (SELECT 1)}
                  Select(distinct=False) [9-26] {SELECT (SELECT 1)}
                    SelectList [16-26] {(SELECT 1)}
                      SelectColumn [16-26] {(SELECT 1)}
                        Subquery [16-26] {(SELECT 1)}
                          Query [17-25] {SELECT 1}
                            Select(distinct=False) [17-25] {SELECT 1}
                              SelectList [24-25] {1}
                                SelectColumn [24-25] {1}
                                  IntegerLiteral(1) [24-25] {1}
  '''
# ---
# name: test_unnest_ok[unnest]
  '''
  SELECT column1 FROM UNNEST(array1)
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          None
          None
  
  Query [0-34] {SELECT column1 F...M UNNEST(array1)}
    Select(distinct=False) [0-34] {SELECT column1 F...M UNNEST(array1)}
      SelectList [7-14] {column1}
        SelectColumn [7-14] {column1}
          Ident(column1) [7-14] {column1}
      FromClause [20-34] {UNNEST(array1)}
        TableUnnestExpression [20-34] {UNNEST(array1)}
          UnnestExpression [20-34] {UNNEST(array1)}
            Ident(array1) [27-33] {array1}
  '''
# ---
# name: test_unnest_ok[unnest_alias]
  '''
  SELECT column1 FROM UNNEST(array1) AS alias1
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          as_alias
            ident	alias1
          None
  
  Query [0-44] {SELECT column1 F...rray1) AS alias1}
    Select(distinct=False) [0-44] {SELECT column1 F...rray1) AS alias1}
      SelectList [7-14] {column1}
        SelectColumn [7-14] {column1}
          Ident(column1) [7-14] {column1}
      FromClause [20-44] {UNNEST(array1) AS alias1}
        TableUnnestExpression [20-44] {UNNEST(array1) AS alias1}
          UnnestExpression [20-34] {UNNEST(array1)}
            Ident(array1) [27-33] {array1}
          Alias [35-44] {AS alias1}
            Ident(alias1) [38-44] {alias1}
  '''
# ---
# name: test_unnest_ok[unnest_alias_with_offset_alias]
  '''
  SELECT column1 FROM UNNEST(array1) AS alias1 WITH OFFSET AS alias2
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          as_alias
            ident	alias1
          from_unnest_offset_expr
            as_alias
              ident	alias2
  
  Query [0-66] {SELECT column1 F...OFFSET AS alias2}
    Select(distinct=False) [0-66] {SELECT column1 F...OFFSET AS alias2}
      SelectList [7-14] {column1}
        SelectColumn [7-14] {column1}
          Ident(column1) [7-14] {column1}
      FromClause [20-66] {UNNEST(array1) A...OFFSET AS alias2}
        TableUnnestExpression [20-66] {UNNEST(array1) A...OFFSET AS alias2}
          UnnestExpression [20-34] {UNNEST(array1)}
            Ident(array1) [27-33] {array1}
          Alias [35-44] {AS alias1}
            Ident(alias1) [38-44] {alias1}
          WithOffset [45-66] {WITH OFFSET AS alias2}
            Alias [57-66] {AS alias2}
              Ident(alias2) [60-66] {alias2}
  '''
# ---
# name: test_unnest_ok[unnest_with_offset]
  '''
  SELECT column1 FROM UNNEST(array1) WITH OFFSET
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          None
          from_unnest_offset_expr	None
  
  Query [0-46] {SELECT column1 F...ay1) WITH OFFSET}
    Select(distinct=False) [0-46] {SELECT column1 F...ay1) WITH OFFSET}
      SelectList [7-14] {column1}
        SelectColumn [7-14] {column1}
          Ident(column1) [7-14] {column1}
      FromClause [20-46] {UNNEST(array1) WITH OFFSET}
        TableUnnestExpression [20-46] {UNNEST(array1) WITH OFFSET}
          UnnestExpression [20-34] {UNNEST(array1)}
            Ident(array1) [27-33] {array1}
          WithOffset [35-46] {WITH OFFSET}
  '''
# ---
# name: test_unnest_ok[unnest_with_offset_alias]
  '''
  SELECT column1 FROM UNNEST(array1) WITH OFFSET AS alias1
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          None
          from_unnest_offset_expr
            as_alias
              ident	alias1
  
  Query [0-56] {SELECT column1 F...OFFSET AS alias1}
    Select(distinct=False) [0-56] {SELECT column1 F...OFFSET AS alias1}
      SelectList [7-14] {column1}
        SelectColumn [7-14] {column1}
          Ident(column1) [7-14] {column1}
      FromClause [20-56] {UNNEST(array1) W...OFFSET AS alias1}
        TableUnnestExpression [20-56] {UNNEST(array1) W...OFFSET AS alias1}
          UnnestExpression [20-34] {UNNEST(array1)}
            Ident(array1) [27-33] {array1}
          WithOffset [35-56] {WITH OFFSET AS alias1}
            Alias [47-56] {AS alias1}
              Ident(alias1) [50-56] {alias1}
  '''
# ---
